--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-   background-color: black;
+   background-color: #ffc107;
    margin: 0;
 }
 
@@ -8,7 +8,7 @@ button{
    color: rgb(10, 0, 0);
    border-radius: 10px;
    padding: 20px;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-family: "poppins", sans-serif;
    font-size: large;
    float: right;
    margin: 30px 30px 30px;
