--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
-   background-color: #ffc107;;
+   background-color: #ffc107;
    font-family: "poppins", sans-serif;
    margin: 0;
 }
 header{
-   background-color: black;
+   background-color: rgb(10, 0, 0);
    margin: 0;
 }
    
@@ -31,16 +31,19 @@ nav{
   word-spacing: 60px;
   font-size: large;
 }
-#quemsomos{
-  word-spacing: 5px;
+footer{
+   color: #ffc107 ;
+   text-align: center; 
+   padding: 20px; 
+   background-color: rgb(10, 0, 0); 
 }
 /* ID */
 
 #botao{
-   color: rgb(10, 0, 0);
+   color: white;
    border-radius: 10px;
    padding: 20px;
    font-family: "poppins", sans-serif;
-   background-color: #ffc107;
    text-decoration: none ;
+   word-spacing: 5px;
 }
