--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
    background-color: #ffc107;
-   font-family: "poppins", sans-serif;
+   font-family: 'Montserrat', sans-serif;
    margin: 0;
 }
 header{
    background-color: rgb(10, 0, 0);
    margin: 0;
+   
 }
    
 button{
@@ -13,7 +14,7 @@ button{
    color: rgb(10, 0, 0);
    border-radius: 10px;
    padding: 20px;
-   font-family: "poppins", sans-serif;
+   font-family: 'Montserrat', sans-serif;
    font-size: large;
    float: right;
    margin: 30px 30px 30px;
