--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-   background-color: #ffc107;
+   background-color: #D35400;
+   color: whitesmoke;
    font-family: 'Montserrat', sans-serif;
    margin: 0;
 }
@@ -7,9 +8,14 @@ header{
    background-color: rgb(10, 0, 0);
    margin: 0;
 }
+h1{
+   color: whitesmoke;
+   padding: 20px;
+   font-family: 'Montserrat', sans-serif;
+}
 button{
-   background-color: #ffc107;
-   color: rgb(10, 0, 0);
+   background-color: #D35400;
+   color: whitesmoke;
    border-radius: 10px;
    padding: 20px;
    font-family: 'Montserrat', sans-serif;
@@ -29,9 +35,9 @@ nav{
   font-size: large;
 }
 footer{
-   color: #ffc107 ;
+   color: whitesmoke;
+   font-family: 'Montserrat', sans-serif;
    text-align: center; 
-   padding: 20px; 
    background-color: rgb(10, 0, 0); 
 }
 /* ID */
