--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+html, body{
+   height: 100%;
+   margin: 0;
+   padding: 0;
+}
 body{
    background-color: #E65100;
    color: whitesmoke;
    font-family: 'Montserrat', sans-serif;
    margin: 0;
-    text-shadow:
-    -1px -1px 0 #000,
-     1px -1px 0 #000,
-    -1px  1px 0 #000,
-     1px  1px 0 #000; /* Sombra do texto */
+   min-height: 100vh;
+   display: flex; 
+   flex-direction: column;
 }
 header{
    background-color: rgb(10, 0, 0);
@@ -56,7 +59,8 @@ footer{
    color: whitesmoke;
    font-family: 'Montserrat', sans-serif;
    text-align: center; 
-   background-color: rgb(10, 0, 0); 
+   background-color: rgb(10, 0, 0);
+   margin-top: auto; 
 }
 footer a {
   color: whitesmoke;
@@ -76,8 +80,11 @@ footer a {
 #botao:hover {
    color:#E65100;
    transform: scale(2.0); /* Aumenta o tamanho da imagem ao passar o mouse */
-   transition: transform 0.3s; /* Transição suave */
+   transition: transform 0.6s; /* Transição suave */
 }
 #bem-vindo{
 font-size: 80%;
+}
+#img-rodape{
+   margin: auto;
 }
