--- a/style.css
+++ b/style.css
@@ -21,13 +21,9 @@ header{
    width: 100%;
    z-index: 1000;
 }
-h1{
-   font-size: 280%;
-   color: whitesmoke;
-   font-family: 'Montserrat', sans-serif;
-   text-align: center;
-   
-}
+
+
+
 h2{
    font-size: 150%;
    color: whitesmoke;
@@ -96,4 +92,28 @@ font-size: 80%;
 }
 #img-rodape{
    margin: auto;
+}
+
+#img-body{
+   padding: 10px 10px;
+   float: left;
+}
+
+H1{
+   float: center;
+   margin: 20px;
+   padding: 20px;
+   text-align: center;
+}
+
+#h2{
+ float: center;
+ margin: 20px;
+ padding: 20px;
+ text-align: center;
+}
+
+
+.mesclar{
+  mix-blend-mode: multiply;
 }
