--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ font-size: 90%;
 background-color: white;
 color: black;
 }
+#lojas{
+   background-color: #E65100;
+   color: white;
+}
 #linha{
    border: 3px solid black;
    margin: 0;
