--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ button{
    float: right;
    transition: background 0.2s;
 }
-H1{
+h1{
    float: center;
    margin: 20px;
    padding: 20px;
@@ -144,4 +144,23 @@ color: rgb(255, 255, 255);
 #img{
   float: left;
   margin: 9px;
+}
+#logo{
+   width: 400px;
+   height: auto;
+   float: none;
+   margin: 0;
+   border: 3px solid black;
+   border-radius: 30px;
+}
+/* Class */
+.section-flex {
+    display: flex;
+    align-items: center;      /* Centraliza verticalmente */
+    justify-content: center;  /* Centraliza horizontalmente */
+    gap: 40px;                /* Espaço entre imagem e texto */
+    min-height: 500px;        /* Ajuste conforme necessário */
+}
+.texto-section {
+    max-width: 600px;         /* Largura máxima do texto */
 }
