--- a/style.css
+++ b/style.css
@@ -116,11 +116,14 @@ color: rgb(255, 255, 255);
 #lojas{
    background-color: #E65100;
    color: white;
+   
 } 
 
-#galery1{
+#galery{
    padding: 0%;
-   margin: 0%;
+   margin:auto;
+   text-align: center;
+   display: flex;
 } 
 
 #description{
