--- a/style.css
+++ b/style.css
@@ -82,7 +82,10 @@ footer{
    font-family: 'Montserrat', sans-serif;
    text-align: center; 
    background-color: black;
-   margin-top: auto; 
+   margin-top: auto;
+   width: 100%;
+   box-sizing: border-box;
+   padding: 20px 0;
 }
 footer a {
   color: whitesmoke;
