--- a/style.css
+++ b/style.css
@@ -82,7 +82,10 @@ footer{
    font-family: 'Montserrat', sans-serif;
    text-align: center; 
    background-color: black;
-   margin-top: auto; 
+   margin-top: auto;
+   width: 100%;
+   box-sizing: border-box;
+   padding: 20px 0;
 }
 footer a {
   color: whitesmoke;
@@ -123,11 +126,9 @@ color: rgb(255, 255, 255);
    
 } 
 
-#galery{
-   padding: 0%;
-   margin: auto;
-   display: flex;
-} 
+
+
+
 
 #description{
    width: 240px;
@@ -149,8 +150,9 @@ color: rgb(255, 255, 255);
  
 #img{
   float: left;
-  margin: 9px;
+  margin: 30px;
 }
+
 #logo{
    width: 400px;
    height: auto;
@@ -227,4 +229,5 @@ color: rgb(255, 255, 255);
 .formulario button:hover {
   background: #bf4800;
 }
+
 
