--- a/cardapio.css
+++ b/cardapio.css
@@ -83,3 +83,19 @@ header img {
   font-size: 1.1em;
   color: #000000;
 }
+/* Rodapé */
+footer{
+   color: whitesmoke;
+   font-family: 'Montserrat', sans-serif;
+   text-align: center; 
+   background-color: black;
+   margin-top: auto;
+   width: 100%;
+   box-sizing: border-box;
+   padding: 20px 0;
+}
+footer a {
+  color: whitesmoke;
+  text-decoration: none;
+  margin: 0 10px;
+}
