--- a/style.css
+++ b/style.css
@@ -174,15 +174,15 @@ color: rgb(255, 255, 255);
     margin-left: 60px;/* Margem esquerda para afastar do logo */
 }
 .formulario {
-  max-width: 400px;
+  max-width: 1000px;
   margin: 40px auto;
-  background: #fff;
-  padding: 30px 25px;
+  background: #000;
+  padding: 10px 50px;
   border-radius: 15px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.08);
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
 }
 
 .formulario h2 {
@@ -194,7 +194,7 @@ color: rgb(255, 255, 255);
 
 .formulario label {
   font-weight: 600;
-  color: #333;
+  color: #E65100;
 }
 
 .formulario input,
@@ -228,4 +228,21 @@ color: rgb(255, 255, 255);
 
 .formulario button:hover {
   background: #bf4800;
+}
+.formulario select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background: #f9f9f9;
+    font-size: 1em;
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 10px;
+    transition: border 0.2s;
+}
+
+.formulario select:focus {
+    border-color: #E65100;
+    outline: none;
+    background: #fff;
 }
