--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ color: rgb(255, 255, 255);
 } 
 
 #lojas{
-   background-color: #E65100;
+   background-color: black;
    color: white;
    
 } 
@@ -131,6 +131,95 @@ color: rgb(255, 255, 255);
    margin-left: 400px;
    margin-top: 400px;
 } 
+
+#midia{
+   width: 100%;
+   height: auto;
+   display: block;
+}
+
+.description{
+   font-size: 150%;
+   position: absolute;
+   bottom: 40%;
+   left: 50%;
+   transform: translate(-50% , -50%);
+   color: white;
+   filter: brightness(200%);
+   padding: 20px;
+   border-radius: 8px;
+   border-color: rgba(0,0,0,0.09);
+   text-align: center;
+   max-width: 80%;
+   
+}
+
+.description h1{
+   margin-top: 0;
+   margin-bottom:  10px;
+   filter: brightness(120%);
+
+
+}
+
+.description p{
+   margin-bottom: 0;   
+   text-align: center;
+
+}
+
+
+#banner{
+   display: flex;
+   height: 2000;
+   padding: auto;
+   text-align: center;
+   position: relative;
+   background-color: #000;
+   overflow: hidden;
+}
+
+.midia{
+   filter: opacity(60%);
+}
+
+.mapa-sobreposto{
+
+   position: absolute; /* Posiciona o mapa em relação ao contêiner */
+  top: 65%;
+  left: 50%; /* Exemplo: Começa o mapa no meio da largura do contêiner */
+bottom: 80%;
+  transform: translate(-50%, -50%); /* Centraliza o mapa */
+  width: 50%; /* Largura do mapa (70% do contêiner) */
+  height: 50%; /* Altura do mapa (70% do contêiner) */
+  border: 5px solid #fff; /* Uma borda para destacar o mapa */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Sombra para profundidade */
+  z-index: 2; /* Coloca o mapa acima do vídeo (um z-index maior) */
+  background-color: #eee; /* Cor de fundo caso o mapa não carregue imediatamente */
+  border-radius: 8px; /* Cantos arredondados para o mapa */
+}
+
+.mapa-sobreposto iframe{
+    border-radius: 4px; /* Cantos levemente arredondados para o iframe interno */
+}
+
+.button{
+   size: 5px;
+  position: relative;
+  bottom: 10%;
+  right: 3%;
+  top: 0.5px;
+  color: white;
+   border-radius: 10px;
+   padding: 0;
+   font-family: "Montserrat", sans-serif;
+   text-decoration: none ;
+   word-spacing: 5px;
+   font-size: 100%;
+   background: none;
+   border: none;
+   transition: color 0.3s, transform 0.3s;
+}
  
 #linha{
    border: 3px solid black;
