--- a/cardapio.css
+++ b/cardapio.css
@@ -121,3 +121,13 @@ h5{
   padding: 20px;
   width: 300px;
 }
+
+/*(Bebidas e Acompanhamentos)*/
+#cardapio h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6em;
+  color: white;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  text-align: center;
+}
