--- a/cardapio.css
+++ b/cardapio.css
@@ -83,3 +83,51 @@ header img {
   font-size: 1.1em;
   color: #000000;
 }
+/* Rodapé */
+footer{
+   color: whitesmoke;
+   font-family: 'Montserrat', sans-serif;
+   text-align: center; 
+   background-color: black;
+   margin-top: auto;
+   width: 100%;
+   box-sizing: border-box;
+   padding: 20px 0;
+}
+footer a {
+  color: whitesmoke;
+  text-decoration: none;
+  margin: 0 15px;
+}
+h5{
+   font-size: 80%;
+}
+/* style.html */
+#foto{
+   width: 100%;
+   border-radius: 10px;
+}
+#corpo{
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; 
+  gap: 30px; 
+  padding: 20px;
+}
+#hamburguer{
+  background: white;
+  color: black;
+  border-radius: 20px;
+  padding: 20px;
+  width: 300px;
+}
+
+/*(Bebidas e Acompanhamentos)*/
+#cardapio h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6em;
+  color: white;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  text-align: center;
+}
