ultimos detalhes do cardápio do site

--- a/cardapio.css
+++ b/cardapio.css
@@ -126,8 +126,24 @@ h5{
 #cardapio h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6em;
-  color: white;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  background-color: #000000;
   text-align: center;
+}
+/*faça seu pedido*/
+button{
+  text-decoration: none;
+   background-color: black;
+   color: #E65100;
+   border-radius: 25px;
+   padding: 20px;
+   font-family: 'Montserrat', sans-serif;
+   font-size: 200%;
+   margin: 0;
+   cursor: pointer;
+   text-align: center;
+   transition: background 0.2s;
+}
+button:hover{
+  background-color: black;
+   transform: scale(1.1); /* Aumenta o tamanho da imagem ao passar o mouse */
 }
